# cell-format

./: README.md  vercel.json
.githooks/: pre-commit
examples/: demo.ipynb  real_world.md
python/: pyproject.toml
python/wolvercote/: __init__.py  __main__.py  genbank.py  parser.py  render_png.py  renderer.py  serialise.py  types.py  utils.py
tests/: test_parser.py  test_suite.json
webapp/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
webapp/e2e/: app.spec.ts
webapp/src/: App.css  App.tsx  index.css
webapp/src/__tests__/: parser.test.ts  renderer.test.ts  serialise.test.ts
webapp/src/components/: InteractiveBuilder.tsx
webapp/src/pages/: About.tsx
webapp/src/wolvercote/: genbank.ts  parser.ts  renderer.ts  serialise.ts  types.ts
